cabal-version:      2.4
name:               simfin
version:            0.1.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  SimFin
    build-depends:    base >=4.14.3.0
                    , http-client-tls
                    , http-client
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite simfin-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.14.3.0
