cabal-version:      2.4
name:               simfin
version:            0.1.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Owen Shepherd
maintainer:         owen@owen.cafe
category:           Web

library
    exposed-modules:  SimFin
                    , SimFin.Types.BalanceSheet
                    , SimFin.Types.ProfitAndLoss
                    , SimFin.Types.CashFlow
                    , SimFin.Types.Industry
                    , SimFin.Types.StringFrac
                    , SimFin.Util
    build-depends:    base >=4.14.3.0
                    , http-client-tls
                    , http-client
                    , exceptions
                    , bytestring
                    , http-types
                    , utf8-string
                    , aeson >=2.0.0
                    , text
                    , time
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite simfin-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.14.3.0
