cabal-version:      2.4
name:               examples
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
author:             Owen Shepherd
maintainer:         owen@owen.cafe

executable examples
    main-is:          Main.hs
    build-depends:    base >=4.13.0.0
                    , simfin
                    , Chart
                    , Chart-cairo
    hs-source-dirs:   app
    default-language: Haskell2010
