cabal-version:      2.4
name:               examples
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
author:             Owen Shepherd
maintainer:         owen@owen.cafe

common common
    default-language: Haskell2010
    hs-source-dirs:   app
    build-depends:    base >=4.13.0.0
                    , simfin
                    , time
                    , Chart
                    , Chart-diagrams
                    , text

executable graph-prices
    import:           common
    main-is:          Prices.hs

executable graph-relative-prices
    import:           common
    main-is:          RelativePrices.hs

executable graph-relative-earnings-per-share-changes
    import:           common
    main-is:          RelativeEarningsPerShareChanges.hs
    build-depends:    containers
                    , multi-containers
